--- a/styles/index.css
+++ b/styles/index.css
@@ -7,6 +7,7 @@ body,
 div#__next {
   height: 100%;
   font-family: 'Open Sans', sans-serif;
+  -webkit-font-smoothing: antialiased;
 }
 html {
   scroll-behavior: smooth;
