--- a/styles/index.scss
+++ b/styles/index.scss
@@ -100,7 +100,7 @@ figure {
 
 .wp-block-button a,
 .wp-block-file a.wp-block-file__button {
-  @apply bg-blue-500 text-white no-underline py-2 px-4;
+  @apply bg-blue-600 text-white no-underline py-2 px-4;
 }
 
 .wp-block-button a:hover,
@@ -124,4 +124,14 @@ figure {
 
 .wp-block-media-text {
   @apply grid grid-cols-2 gap-4;
+}
+
+p {
+  a {
+    @apply text-blue-600;
+  }
+
+  a:hover {
+    @apply text-blue-400;
+  }
 }
