--- a/styles/index.scss
+++ b/styles/index.scss
@@ -136,70 +136,166 @@ p {
   }
 }
 
-.join-bm-section {
-  display: flex;
-  gap: 10px;
-  padding-top: 35px;
 
-  .photo-slider {
-    width: 65%;
-  }
+.join-bm-slider-wrapper {
+  background: #fafaff;
 
-  .volunteer-info {
-    .volunteer-count {
-      display: flex;
-      box-sizing: border-box;
-      justify-content: center;
-    align-items: flex-start !important;
-    width: 340px;
-      .country-text{
-        padding-right: 40px;
-        box-sizing: border-box;
-        div {
-          display: block;
-      }
-     
-        .volunteer-hours{
-          width: 20px;
-          height: 20px;
-        }
-        .text-data-custom{
-          box-sizing: border-box;
-
-          div {
-            display: block;
-        }
-        p {
-          display: inline-block;
+  h2 {
     font-family: "Open Sans";
     font-style: normal;
-    font-weight: 800;
-    font-size: 38px;
-    line-height: 52px;
-    text-align: center;
-    letter-spacing: .0000010729px;
-    background: linear-gradient(90deg, #3a62c8 -3.32%, #61b1ee 82.05%);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: rgba(0,0,0,0);
-    margin: 0;
-    margin-block-start: 1em;
-    margin-block-end: 1em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-        }
-        .text-center {
-          text-align: center;
-      }
-      body {
-        margin: 0;
-        font-family: "Open Sans",sans-serif;
-        background-color: #fafaff;
-    }
-    webkit-font-smoothing: antialiased;
-        }
-      }
-    }
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 35px;
+    margin-top: 26px;
+    margin-bottom: 12px;
+  }
+  .join_bm_carousel_sec {
+    margin-top: 35px;
+    display: flex;
+    gap: 10px;
+  }
+  .membersPhoto {
+    width: 62%;
+  }
+  .country_count_col:not(:nth-of-type(3)) {
+    padding-right: 40px;
+  }
+  .slick-dots li button:before {
+    content: "";
+    width: 12px;
+    height: 12px;
+    background: #ffffff;
+    border: 1px solid #646464;
+    border-radius: 100%;
+    opacity: 1 !important;
+  }
+  .slick-dots li.slick-active button:before {
+    background: #646464;
+  }
 
-    .volunteer-opportunity {}
+  .slick-arrow {
+    top: 35% !important;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .join_bm_desc {
+    p {
+      font-family: "Open Sans";
+      font-style: normal;
+      font-weight: 500;
+      font-size: 16px;
+      line-height: 150%;
+      color: #524d42;
+      margin: 0;
+    }
+  }
+  .slider-image {
+    width: fit-content;
+    margin-left: auto;
+    margin-right: auto;
+    height: 350px;
+    outline: none;
+  }
+  .volunteer-count {
+    margin: auto;
+    width: fit-content;
+  }
+  .volunteer-count-section {
+    justify-content: center;
+    align-items: flex-start !important;
+    width: 340px;
+  }
+  .text-data-custom {
+    > p {
+      display: inline-block;
+      font-family: "Open Sans";
+      font-style: normal;
+      font-weight: 800;
+      font-size: 38px;
+      line-height: 52px;
+      text-align: center;
+      letter-spacing: 1.07288e-6px;
+      background: linear-gradient(90deg, #3a62c8 -3.32%, #61b1ee 82.05%);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      background-clip: text;
+      text-fill-color: transparent;
+      margin: 0;
+    }
+    > pre {
+      font-family: "Open Sans";
+      font-style: normal;
+      font-weight: 800;
+      font-size: 12px;
+      line-height: 16px;
+      text-align: center;
+      letter-spacing: 1.07288e-6px;
+      background: linear-gradient(90deg, #3a62c8 -3.32%, #61b1ee 82.05%);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      background-clip: text;
+      text-fill-color: transparent;
+      margin: 0;
+    }
+  }
+  .opportunity-section {
+    margin-top: 30px;
+    .title {
+      font-family: "Open Sans";
+      font-style: normal;
+      font-weight: 600;
+      font-size: 18px;
+      line-height: 150%;
+      color: #2c2d41;
+      margin-top: 0 !important;
+      margin-bottom: 8px;
+    }
+    .position-list {
+      padding-left: 20px;
+    }
+    .pos_link_url {
+      font-family: "Open Sans";
+      font-style: normal;
+      font-weight: 400;
+      font-size: 14px;
+      color: #2c2d41;
+      transition: all 0.3s ease;
+
+      &:hover {
+        color: #3174d0;
+      }
+    }
+    .apply_now_button {
+      margin-top: 10px;
+      display: inline-flex;
+      justify-content: center;
+      align-items: center;
+      height: 30px;
+      width: 116px;
+      max-width: 116px;
+      padding: 0;
+      background: #f4ac3d;
+      border-radius: 8px;
+      text-transform: uppercase;
+      color: #ffffff;
+      font-style: normal;
+      font-weight: 800;
+      font-size: 12px;
+      line-height: 14px;
+      text-align: center;
+      letter-spacing: normal;
+
+      &:hover {
+        background: #61b1ee;
+      }
+    }
+  }
+  .country-text {
+    img {
+      width: 20px;
+      height: 20px;
+    }
   }
 }
