--- a/styles/index.scss
+++ b/styles/index.scss
@@ -213,64 +213,27 @@ p {
     }
   }
 
-  // Our-Partners spinner custom styles
+  // Our-Partners Section custom styles
 
-  .our-partners {
-
-    .partner-logos-slider-wrapper {
-      .slick-slide {
-        padding: 0 5px;
-        div {
-          transition: none;
-        }
-        &:first-child {
-          margin-left: 0;
-          padding-left: 0;
-        }
-        &:last-child {
-          margin-right: 18px;
-          padding-right: 10px;
-        }
+  .partner-logos-slider-wrapper {
+    .slick-slide {
+      padding: 0 5px;
+      div {
+        transition: none;
       }
-      /* the parent */
-      .slick-list {
-        padding: 0 -5x;
+      &:first-child {
+        margin-left: 0;
+        padding-left: 0;
+      }
+      &:last-child {
+        margin-right: 18px;
+        padding-right: 10px;
       }
     }
-
-    .custom-sections-gap {
-      padding-top: 25px;
-      padding-bottom: 50px;
-    }
-
-    .spinner-overlay {
-      height: 60vh;
-      width: 100%;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-
-    .spinner-container {
-      display: inline-block;
-      width: 50px;
-      height: 50px;
-      border: 3px solid rgba(195, 195, 195, 0.6);
-      border-radius: 50%;
-      border-top-color: #636767;
-      animation: spin 1s ease-in-out infinite;
-      -webkit-animation: spin 1s ease-in-out infinite;
-
-      @keyframes spin {
-        to {
-          -webkit-transform: rotate(360deg);
-        }
-      }
-      @-webkit-keyframes spin {
-        to {
-          -webkit-transform: rotate(360deg);
-        }
-      }
+    /* the parent */
+    .slick-list {
+      padding: 0 -5x;
     }
   }
+
 }
