add: HomePage/JoinBMSection.tsx opportunities section

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -274,6 +274,8 @@ p {
 
     .position-list {
       padding-left: 20px;
+      list-style-type: disc;
+      color: black;
     }
 
     .pos_link_url {
