--- a/styles/index.scss
+++ b/styles/index.scss
@@ -565,3 +565,111 @@ p {
     align-items: center;
   }
 }
+
+// Campaign
+.campaign-slider-wrapper {
+  h2 {
+    font-style: normal;
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 30px;
+    color: #2c2d41;
+    position: relative;
+  }
+  .horizontal-divider {
+    hr {
+      border: 0;
+      border-bottom: 2px solid #3c65ca;
+      width: 100%;
+    }
+  }
+  .see-more-text {
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 16px;
+    text-align: right;
+    color: #2c2d41;
+  }
+
+  .campaignCard {
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 4px !important;
+    max-width: 586px;
+    min-width: 586px;
+    max-height: 253px;
+    min-height: 253px;
+    margin-right: 10px;
+    display: flex;
+    gap: 24px;
+    cursor: pointer;
+    background-color: #ffffff;
+    margin-bottom: 15px;
+    img {
+      max-height: 253px;
+      min-height: 253px;
+      max-width: 245px;
+      min-width: 245px;
+      object-fit: cover;
+      object-position: center center;
+      border-radius: 4px;
+    }
+    .campaign-content {
+      display: flex;
+      flex-direction: column;
+      color: #2c2d41;
+      position: relative;
+      padding: 10px 15px 20px 0px;
+      max-height: 253px;
+      min-height: 253px;
+      .campaignCategory {
+        display: flex;
+        align-items: center;
+        width: fit-content;
+        margin-right: 5px;
+        background-color: transparent;
+        span {
+          margin-right: 0;
+        }
+      }
+      .campaign-title {
+        font-weight: 700;
+        font-size: 16px;
+        line-height: 130%;
+        margin-bottom: 13px;
+        margin: 8px 0 5px 0;
+      }
+      .campaign-desc {
+        font-style: normal;
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 150%;
+        color: #524d42;
+        margin: 0 !important;
+        overflow: hidden;
+
+        p {
+          display: inline-block;
+          font-style: normal;
+          font-weight: 400;
+          font-size: 14px;
+          line-height: 150%;
+          color: #524d42;
+          margin: 0 !important;
+          overflow: hidden;
+        }
+      }
+      .campaign-date {
+        position: absolute;
+        bottom: 0;
+        right: 16px;
+        span {
+          font-weight: 700;
+          font-size: 14px;
+          line-height: 16px;
+          color: #2c2d41;
+        }
+      }
+    }
+  }
+}
