--- a/styles/index.scss
+++ b/styles/index.scss
@@ -261,10 +261,8 @@ p {
     justify-content:center;
 }
 /* Join Breathe Mongolia styles start */
-
 .join-bm-slider-wrapper {
   background: #fafaff;
-
   h2 {
     font-family: "Open Sans";
     font-style: normal;
@@ -274,21 +272,17 @@ p {
     margin-top: 26px;
     margin-bottom: 12px;
   }
-
   .join_bm_carousel_sec {
     margin-top: 35px;
     display: flex;
     gap: 10px;
   }
-
   .membersPhoto {
     width: 62%;
   }
-
   .country_count_col:not(:nth-of-type(3)) {
     padding-right: 40px;
   }
-
   .slick-dots li button:before {
     content: "";
     width: 12px;
@@ -298,18 +292,15 @@ p {
     border-radius: 100%;
     opacity: 1 !important;
   }
-
   .slick-dots li.slick-active button:before {
     background: #646464;
   }
-
   .slick-arrow {
     top: 35% !important;
     display: flex;
     align-items: center;
     justify-content: center;
   }
-
   .join_bm_desc {
     p {
       font-family: "Open Sans";
@@ -321,7 +312,6 @@ p {
       margin: 0;
     }
   }
-
   .slider-image {
     width: fit-content;
     margin-left: auto;
@@ -329,24 +319,20 @@ p {
     height: 350px;
     outline: none;
   }
-
   .volunteer-count {
     margin: auto;
     width: fit-content;
   }
-
   .volunteer-count-section {
     justify-content: center;
     align-items: flex-start !important;
     width: 340px;
   }
-
   .flex-row {
     display: flex !important;
     flex-wrap: wrap !important;
     align-items: center;
   }
-
   .text-data-custom {
     >p {
       display: inline-block;
@@ -364,7 +350,6 @@ p {
       text-fill-color: transparent;
       margin: 0;
     }
-
     >pre {
       font-family: "Open Sans";
       font-style: normal;
@@ -381,10 +366,8 @@ p {
       margin: 0;
     }
   }
-
   .opportunity-section {
     margin-top: 30px;
-
     .title {
       font-family: "Open Sans";
       font-style: normal;
@@ -395,13 +378,11 @@ p {
       margin-top: 0 !important;
       margin-bottom: 8px;
     }
-
     .position-list {
       padding-left: 20px;
       list-style-type: disc;
       color: black;
     }
-
     .pos_link_url {
       font-family: "Open Sans";
       font-style: normal;
@@ -409,12 +390,10 @@ p {
       font-size: 14px;
       color: #2c2d41;
       transition: all 0.3s ease;
-
       &:hover {
         color: #3174d0;
       }
     }
-
     .apply_now_button {
       margin-top: 10px;
       display: inline-flex;
@@ -434,13 +413,11 @@ p {
       line-height: 14px;
       text-align: center;
       letter-spacing: normal;
-
       &:hover {
         background: #61b1ee;
       }
     }
   }
-
   .country-text {
     img {
       width: 20px;
@@ -450,25 +427,21 @@ p {
     }
   }
 }
-
 @media (max-width: 1064px) {
   .join-bm-slider-wrapper .volunteer-count {
     padding-left: 0;
   }
 }
-
 @media (max-width: 767px) {
   .join-bm-slider-wrapper {
     .volunteer-count {
       margin: auto;
       width: 90% !important;
       flex-direction: column;
-
       .volunteer-count-section {
         width: 350px;
         flex-wrap: nowrap !important;
       }
-
       .opportunity-section {
         width: 350px;
       }
@@ -485,7 +458,6 @@ p {
        }
      }
 }
-
 @media (max-width: 950px) {
   .join-bm-slider-wrapper {
     .join_bm_desc {
@@ -494,29 +466,24 @@ p {
         font-size: 15px;
       }
     }
-
     .join_bm_carousel_sec {
       flex-direction: column;
       gap: 60px;
     }
-
     .membersPhoto {
       width: 85%;
       margin: 0 auto;
     }
-
     .slider-image {
       object-position: top center;
       margin: 0 auto;
     }
-
     .volunteer-count {
       display: flex;
       width: 75%;
       gap: 40px;
       margin: 0 auto;
     }
-
     .opportunity-section {
       margin-top: 0px;
 
@@ -525,9 +492,7 @@ p {
       }
     }
   }
-
   /* Join Breathe Mongolia styles end */
-
   // Our-Partners Section custom styles
   .partner-logos-slider-wrapper {
 
@@ -566,7 +531,7 @@ p {
   }
 }
 
-// Campaign
+/* Our Work Carousel styles start */
 .campaign-slider-wrapper {
   h2 {
     font-style: normal;
@@ -591,7 +556,6 @@ p {
     text-align: right;
     color: #2c2d41;
   }
-
   .campaignCard {
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 4px !important;
@@ -647,7 +611,6 @@ p {
         color: #524d42;
         margin: 0 !important;
         overflow: hidden;
-
         p {
           display: inline-block;
           font-style: normal;
@@ -673,3 +636,53 @@ p {
     }
   }
 }
+@media (max-width: 767px) {
+  .campaign-slider-wrapper {
+    .slick-slider,
+    .slick-list,
+    .slick-track,
+    .slick-slide {
+      height: 540px !important;
+    }
+    .slick-slide {
+      width: 386px;
+      padding: 0;
+      margin-right: 20px;
+    }
+    .slick-list {
+      margin: 0px;
+    }
+    .campaignCard {
+      box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+      border-radius: 4px !important;
+      max-width: 364px;
+      width: 364px;
+      min-width: 364px;
+      min-height: 530px;
+      max-height: 530px;
+      display: flex;
+      flex-direction: column;
+      margin-bottom: 15px;
+      box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+      border: 0.5px solid rgba(0, 0, 0, 0.25);
+      img {
+        max-height: 253px;
+        min-height: 253px;
+        min-width: 364px;
+        max-width: 364px;
+        object-fit: cover;
+        object-position: center center;
+        border-radius: 4px;
+      }
+      .campaign-content {
+        padding: 0px 0px 20px 0px;
+        max-height: 243px;
+        min-height: 243px;
+        min-width: 350px;
+        max-width: 350px;
+        margin: 0 auto;
+      }
+    }
+  }
+}
+/* Our Work Carousel styles end */
