--- a/styles/index.scss
+++ b/styles/index.scss
@@ -531,7 +531,6 @@ p {
   // Our-Partners Section custom styles
   .partner-logos-slider-wrapper {
 
-
     .slick-slide {
       padding: 0 5px;
 
@@ -557,7 +556,6 @@ p {
   }
 }
 
-
 .partner-logos-slider-wrapper {
   .slick-track {
     display: flex !important;
@@ -565,3 +563,115 @@ p {
     align-items: center;
   }
 }
+
+// TakeActionCarousel Styling Beginning
+.take-action-carousel {
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 4px;
+  max-width: 236px;
+  width: 236px !important;
+  cursor: pointer;
+  text-decoration: none;
+  height: 200px;
+  &.big {
+    max-width: 487px;
+    width: 487px !important;
+    height: 410px;
+    grid-column: auto / span 2;
+    grid-row: auto / span 2;
+    .take-action-img {
+      height: 306px;
+    }
+    .take-action-info {
+      padding: 15px 20px;
+      height: 104px !important;
+      .take-action-title {
+        width: 375px;
+        font-size: 24px;
+        display: -webkit-box;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
+      }
+      .read-more-arrow {
+        width: 50px;
+        svg {
+          width: 50px;
+          height: 50px;
+        }
+      }
+    }
+  }
+
+  .take-action-img {
+    width: 100%;
+    height: 130px;
+    border-radius: 4px 4px 0px 0px;
+    object-fit: cover;
+  }
+  .take-action-info {
+    box-sizing: border-box;
+    background: #ffffff;
+    border: none;
+    border-radius: 0px 0px 4px 4px;
+    padding: 8px 13px;
+    width: 100%;
+    display: flex;
+    overflow: hidden;
+    justify-content: space-between;
+    align-items: center;
+    font-family: "Open Sans";
+    font-style: normal;
+    font-weight: 700;
+    height: 70px;
+    min-height: 70px;
+    max-height: fit-content;
+
+    .take-action-type {
+      margin: 0;
+      padding: 0;
+      width: fit-content;
+      height: fit-content;
+      justify-content: flex-start;
+      flex-wrap: wrap;
+      background-color: transparent;
+      div {
+        width: fit-content;
+        display: flex;
+        align-items: center;
+        margin-right: 5px;
+        span {
+          &:last-child {
+            margin-right: 0;
+          }
+        }
+        &:last-child {
+          margin-right: 0;
+        }
+      }
+    }
+
+    .take-action-title {
+      width: 181px;
+      font-size: 16px;
+      line-height: 130%;
+      display: -webkit-box;
+      -webkit-line-clamp: 3;
+      -webkit-box-orient: vertical;
+      overflow: hidden;
+      font-weight: 600;
+      max-height: fit-content;
+    }
+
+    .read-more-arrow {
+      display: inline-block;
+      width: 24px;
+    }
+    &:hover {
+      text-decoration: none;
+      color: inherit;
+    }
+  }
+}
+
+// TakeActionCarousel Styling End
