--- a/styles/index.scss
+++ b/styles/index.scss
@@ -77,10 +77,10 @@ figure {
   @apply table ml-0 mr-0;
 }
 
-.wp-block-image .alignleft>figcaption,
-.wp-block-image .alignright>figcaption,
-.wp-block-image .aligncenter>figcaption,
-.wp-block-image.is-resized>figcaption {
+.wp-block-image .alignleft > figcaption,
+.wp-block-image .alignright > figcaption,
+.wp-block-image .aligncenter > figcaption,
+.wp-block-image.is-resized > figcaption {
   @apply table-caption;
 
   caption-side: bottom;
@@ -155,7 +155,6 @@ p {
   height: 51px;
 }
 
-
 /* Banner section styles start */
 .banner-slider-wrapper {
   margin-bottom: 70px;
@@ -191,7 +190,7 @@ p {
     height: 36px;
 
     p {
-      font-family: "Open Sans";
+      font-family: 'Open Sans';
       font-style: normal;
       font-weight: 700;
       font-size: 13px;
@@ -211,7 +210,6 @@ p {
     }
   }
 }
-
 .news-carousel-section {
   .slick-slide {
     padding: 0 5px;
@@ -270,7 +268,7 @@ p {
   top: 50% !important;
   display: flex !important;
   align-items: center;
-  justify-content:center;
+  justify-content: center;
 }
 
 /* Join Breathe Mongolia styles start */
@@ -278,7 +276,7 @@ p {
   background: #fafaff;
 
   h2 {
-    font-family: "Open Sans";
+    font-family: 'Open Sans';
     font-style: normal;
     font-weight: 700;
     font-size: 26px;
@@ -302,7 +300,7 @@ p {
   }
 
   .slick-dots li button:before {
-    content: "";
+    content: '';
     width: 12px;
     height: 12px;
     background: #ffffff;
@@ -324,7 +322,7 @@ p {
 
   .join_bm_desc {
     p {
-      font-family: "Open Sans";
+      font-family: 'Open Sans';
       font-style: normal;
       font-weight: 500;
       font-size: 16px;
@@ -360,9 +358,9 @@ p {
   }
 
   .text-data-custom {
-    >p {
+    > p {
       display: inline-block;
-      font-family: "Open Sans";
+      font-family: 'Open Sans';
       font-style: normal;
       font-weight: 800;
       font-size: 38px;
@@ -377,8 +375,8 @@ p {
       margin: 0;
     }
 
-    >pre {
-      font-family: "Open Sans";
+    > pre {
+      font-family: 'Open Sans';
       font-style: normal;
       font-weight: 800;
       font-size: 12px;
@@ -398,7 +396,7 @@ p {
     margin-top: 30px;
 
     .title {
-      font-family: "Open Sans";
+      font-family: 'Open Sans';
       font-style: normal;
       font-weight: 600;
       font-size: 18px;
@@ -415,7 +413,7 @@ p {
     }
 
     .pos_link_url {
-      font-family: "Open Sans";
+      font-family: 'Open Sans';
       font-style: normal;
       font-weight: 400;
       font-size: 14px;
@@ -544,7 +542,6 @@ p {
   /* Join Breathe Mongolia styles end */
   // Our-Partners Section custom styles
   .partner-logos-slider-wrapper {
-
     .slick-slide {
       padding: 0 5px;
 
@@ -641,7 +638,7 @@ p {
     overflow: hidden;
     justify-content: space-between;
     align-items: center;
-    font-family: "Open Sans";
+    font-family: 'Open Sans';
     font-style: normal;
     font-weight: 700;
     height: 70px;
@@ -700,7 +697,6 @@ p {
 }
 
 // TakeActionCarousel Styling End
-
 
 /* Our Work Carousel styles start */
 .campaign-slider-wrapper {
@@ -822,7 +818,6 @@ p {
 
 @media (max-width: 767px) {
   .campaign-slider-wrapper {
-
     .slick-slider,
     .slick-list,
     .slick-track,
