--- a/styles/footer.scss
+++ b/styles/footer.scss
@@ -8,6 +8,8 @@
   .footer_link_section {
     gap: 50px;
     display: flex;
+    flex-wrap: wrap;
+
     .column_style {
       a {
         min-width: 127px;
@@ -16,29 +18,32 @@
     }
   }
 }
+.subscribeInput {
+  width: 350px;
+}
 @media (max-width: 1064px) {
   .footer_wrapper {
     width: 100%;
-    flex-direction: column;
-    justify-content: center;
     padding-bottom: 40px;
     gap: 20px;
 
     .footer_link_section {
-      gap: 15%;
-      justify-content: space-evenly;
-    }
-    .contact_section {
-      margin-left: auto;
-      margin-right: auto;
+      justify-content: center;
+
+      flex-wrap: wrap;
     }
   }
 }
 @media (max-width: 700px) {
+  .subscribeInput {
+    width: 300px;
+  }
+  .mobileRelative {
+    position: relative;
+  }
   .footer_wrapper {
     width: 365px;
     flex-direction: row;
-    position: relative;
     justify-content: space-between;
     .footer_link_section {
       gap: 15px;
@@ -46,6 +51,9 @@
     }
     .contact_section {
       margin: 0;
+      position: absolute;
+      right: 0;
+
       h2 {
         display: none;
       }
@@ -57,11 +65,8 @@
       }
       .mobile_style {
         position: absolute;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        margin-left: auto;
-        margin-right: auto;
+        right: -170%;
+        bottom: -70px;
       }
     }
   }
