--- a/styles/index.scss
+++ b/styles/index.scss
@@ -871,173 +871,4 @@ p {
   }
 }
 
-// Take Action Page - Take Action Grid Styling
-.ta-category {
-  display: flex;
-  flex-direction: row;
-  justify-content: right;
-  align-items: center;
-  padding: 8px;
-  margin: 3px;
-  height: 24px;
-  background: #e8e8e8;
-  color: #000000;
-  border-radius: 16px;
-  cursor: pointer;
-  font-size: 12px;
-}
-
-.selected {
-  color: #fafaff;
-  background: #f4ac3d;
-}
-
-.ta-actions {
-  padding: 20px 0;
-  background-color: #f4ac3d;
-  .action-item.big {
-    .action-title {
-      .action-title-name {
-        h4 {
-          height: auto;
-          line-height: 1;
-        }
-        h2 {
-          display: -webkit-box;
-          -webkit-line-clamp: 2;
-          -webkit-box-orient: vertical;
-          overflow: hidden;
-          height: auto;
-        }
-      }
-    }
-  }
-
-  // .ta-categories {
-  //   display: flex;
-  //   flex-direction: row;
-  //   justify-content: center;
-  //   align-items: flex-start;
-  //   flex-wrap: wrap;
-
-  //   .ta-category {
-  //     display: flex;
-  //     flex-direction: row;
-  //     justify-content: right;
-  //     align-items: center;
-  //     padding: 8px;
-  //     margin: 3px;
-  //     height: 24px;
-  //     background: #ffffff;
-  //     border-radius: 16px;
-  //     cursor: pointer;
-  //     font-size: 10px;
-  //   }
-
-  //   .selected {
-  //     color: #f4ac3d;
-  //   }
-  // }
-
-  .actions-title {
-    font-weight: bold;
-    font-size: 16px;
-    line-height: 116%;
-    color: #003749;
-    padding: 0 40px;
-    margin-bottom: 15px;
-  }
-
-  .slick-slide {
-    padding: 0 8px;
-  }
-
-  .parent-pagination {
-    align-items: center;
-    justify-content: center;
-
-    .landing-page-pagination {
-      right: auto;
-
-      .page-numbers {
-        padding-left: 0;
-      }
-    }
-  }
-
-  .action-slider-items {
-    .action-slider-item {
-      display: flex;
-      flex-direction: row;
-      margin: 10px;
-      border-radius: 10px;
-      background-color: #fff;
-
-      .action-right {
-        width: 30%;
-
-        img {
-          width: calc(100% + 10px);
-          max-width: calc(100% + 10px);
-          min-height: 100%;
-          max-height: 100%;
-          object-fit: cover;
-          border-radius: 10px 0 0 10px;
-        }
-      }
-
-      .action-left {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: flex-start;
-        padding: 15px 15px 15px 25px;
-        width: 70%;
-
-        h4 {
-          font-weight: bold;
-          font-size: 10px;
-          line-height: 16px;
-          color: #f4ac3d;
-          margin: 0;
-        }
-
-        h2 {
-          font-weight: 700;
-          font-size: 12px;
-          line-height: 16px;
-          color: #2c2d41;
-          margin-top: 0;
-          display: -webkit-box;
-          -webkit-line-clamp: 2;
-          -webkit-box-orient: vertical;
-          overflow: hidden;
-        }
-
-        p {
-          font-weight: 600;
-          font-size: 8px;
-          line-height: 11px;
-          color: #2c2d41;
-          margin: 0;
-          min-height: 20px;
-          display: -webkit-box;
-          -webkit-line-clamp: 3;
-          -webkit-box-orient: vertical;
-          overflow: hidden;
-        }
-
-        .action-button {
-          a {
-            font-style: normal;
-            font-weight: 700;
-            font-size: 8px;
-            line-height: 11px;
-            text-decoration-line: underline;
-            color: #61b1ee;
-          }
-        }
-      }
-     }
-  }
-}
+/* Our Work Carousel styles end */
