--- a/styles/index.scss
+++ b/styles/index.scss
@@ -963,3 +963,418 @@ p {
   // padding: 1rem;
   // border-radius: calc(0.25rem - 1px);
 }
+
+// SearchBar Component
+.header-search-container {
+  position: relative;
+  cursor: pointer;
+  width: 40px;
+  height: 40px;
+
+  .header-search {
+    margin: 0;
+    width: 40px;
+    height: 40px;
+    border-radius: 50px;
+    border: none;
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding: 0;
+    padding-left: 20px;
+    transition: all 0.5s;
+    overflow: hidden;
+
+    &.open {
+      background: rgba(255, 255, 255, 0.42);
+    }
+
+    input {
+      width: 100%;
+      height: 40px;
+      border-radius: 50px;
+      border: none;
+      outline: none;
+      font-weight: bold;
+      line-height: 25px;
+      background-color: transparent;
+      color: #fff;
+      font-size: 0;
+
+      &::placeholder {
+        font-weight: normal;
+      }
+    }
+
+    &:before {
+      content: '';
+      background-image: url('../assets/images/search.png');
+      background-position: center center;
+      background-repeat: no-repeat;
+      position: absolute;
+      border-radius: 50px;
+      top: 0;
+      right: 0;
+      background-size: 18px 20px;
+      width: 40px;
+      height: 40px;
+      z-index: 1;
+    }
+
+    &.open {
+      box-shadow: none;
+      width: 240px;
+      padding-left: 20px;
+      padding-right: 48px;
+
+      input {
+        font-size: 12px;
+      }
+    }
+
+    svg {
+      fill: none;
+      margin: 0;
+    }
+  }
+}
+
+@media (max-width: 767px) {
+  .search-page-container {
+    padding-top: 30px;
+
+    .search-form-container {
+      width: calc(100% - 40px) !important;
+    }
+  }
+}
+
+// Team Card Component
+.team-card {
+  background: #ffffff;
+  box-shadow: 0px 4px 20px rgba(138, 138, 138, 0.15);
+  border-radius: 4px;
+  padding: 25px 15px;
+
+  .card-header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-bottom: 2px solid rgba(82, 143, 236, 0.25);
+    padding-bottom: 20px;
+
+    .avatar {
+      width: 87px;
+      height: 87px;
+      border: 7px solid rgba(82, 143, 236, 0.25);
+      border-radius: 100%;
+      margin-bottom: 17px;
+    }
+
+    h2 {
+      font-family: 'Open Sans';
+      font-style: normal;
+      font-weight: 700;
+      font-size: 18px;
+      line-height: 25px;
+      color: #2c2d41;
+      margin-top: 0;
+      margin-bottom: 5px;
+      text-align: center;
+    }
+
+    span {
+      font-family: 'Open Sans';
+      font-style: normal;
+      font-weight: 700;
+      font-size: 14px;
+      line-height: 19px;
+      color: rgba(44, 45, 65, 0.5);
+    }
+  }
+
+  .card-body {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+
+    p {
+      font-family: 'Open Sans';
+      font-style: normal;
+      font-weight: 400;
+      font-size: 14px;
+      line-height: 150%;
+      color: #7f7f7f;
+      margin-bottom: 20px;
+      text-align: center;
+    }
+
+    a {
+      background-color: #0077b5;
+      width: 30px;
+      height: 30px;
+      border-radius: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+  }
+}
+
+// Search Page Component
+.search-page-container {
+  margin-left: auto;
+  margin-right: auto;
+  width: 100% !important;
+  max-width: 1064px;
+
+  .search-form-container {
+    margin: 0 auto;
+    margin-bottom: 40px;
+    width: 982px;
+
+    .search-form {
+      text-align: center;
+      position: relative;
+      height: 55px;
+      background: #ffffff;
+      border-radius: 10px;
+      filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+      overflow: hidden;
+      margin-bottom: 35px;
+
+      input {
+        padding: 17px 25px;
+        border: 0;
+        outline: none;
+        width: 100%;
+        height: 55px;
+      }
+
+      .search-btn {
+        position: absolute;
+        top: 0;
+        right: 0;
+        height: 55px;
+        width: 55px;
+        cursor: pointer;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        svg {
+          width: 19px;
+        }
+      }
+    }
+  }
+
+  .actions-grid {
+    grid-gap: 5px;
+  }
+
+  .ta-actions,
+  .team-container {
+    margin-top: 30px;
+  }
+  .news-grid {
+    margin-left: auto;
+    margin-right: auto;
+    display: grid;
+    justify-content: space-between;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 35px 35px;
+    margin-bottom: 20px;
+  }
+  .teams-grid {
+    margin-left: auto;
+    margin-right: auto;
+    display: grid;
+    justify-content: space-between;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 15px 20px;
+    margin-bottom: 20px;
+  }
+
+  .search-title {
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 30px;
+    line-height: 41px;
+    letter-spacing: 1.07288e-6px;
+    color: #2c2d41;
+    margin-top: 0;
+    margin-bottom: 20px;
+  }
+}
+
+@media (max-width: 767px) {
+  .search-page-container {
+    .news-section {
+      .latest-news {
+        width: calc(100% - 30px);
+        margin: 0 auto;
+        margin-bottom: 15px;
+
+        .news-item {
+          width: 100%;
+        }
+      }
+    }
+    .scrollSection {
+      max-height: 450px;
+      margin-left: auto;
+      margin-right: auto;
+      width: calc(100% - 30px);
+      margin-bottom: 30px;
+      max-height: 450px;
+      padding-top: 10px;
+      padding-bottom: 10px;
+      overflow-x: hidden;
+      overflow: scroll;
+      &::-webkit-scrollbar {
+        background-color: #efefef;
+        width: 10px;
+        height: 90%;
+        border-radius: 5px;
+      }
+      &::-webkit-scrollbar-thumb {
+        background-color: #a3a3a3;
+        border-radius: 1.25em;
+      }
+    }
+
+    .ta-actions {
+      background-color: #ffffff;
+
+      .actions-title {
+        padding-left: 15px;
+      }
+    }
+
+    .search-title {
+      margin: 0 15px;
+      font-size: 18px;
+      line-height: 25px;
+      margin-bottom: 20px;
+    }
+
+    .team-container {
+      padding-bottom: 60px;
+      padding-left: 16px;
+
+      .team-card {
+        width: 312px;
+        margin-right: 20px;
+        margin-bottom: 20px;
+      }
+    }
+
+    .actions-grid {
+      width: calc(100% - 30px);
+      margin: 0 auto;
+      margin-bottom: 15px;
+      display: block;
+
+      .actions-item {
+        &.big {
+          filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+        }
+      }
+    }
+
+    .action-slider-items {
+      .action-slider-item {
+        filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+      }
+    }
+  }
+}
+
+// Pagination Component
+.pagination-wrapper {
+  user-select: none;
+  padding-top: 10px;
+  ul.pagination {
+    padding-inline-start: 0;
+  }
+  .pagination {
+    margin-right: auto;
+    list-style: none;
+    margin-left: auto;
+    text-align: center;
+    display: flex;
+    gap: 40px;
+    justify-content: center;
+    align-items: center;
+    .pageNumber {
+      width: 50px;
+      height: 50px;
+      border-radius: 100%;
+      border: none;
+      font-weight: 700;
+      font-size: 20px;
+      line-height: 27px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      cursor: pointer;
+      &:hover:not([disabled]) {
+        background: #f4ac3d;
+        width: 50px;
+        height: 50px;
+        border-radius: 100%;
+        border: none;
+        color: #fff;
+        svg {
+          path {
+            fill: #fff;
+          }
+        }
+      }
+    }
+    .pagination_active {
+      background: #f4ac3d;
+      color: #fff;
+    }
+
+    .paginationButton {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      cursor: pointer;
+      background: #fafaff;
+      width: 50px;
+      height: 50px;
+      border: 0.2px solid #524d42;
+      border-radius: 50px;
+      &.next {
+        svg {
+          transform: rotate(180deg);
+        }
+      }
+      &:hover:not([disabled]) {
+        background: #f4ac3d;
+        width: 50px;
+        height: 50px;
+        border-radius: 100%;
+        border: none;
+        color: #fff;
+        svg {
+          path {
+            fill: #fff;
+          }
+        }
+      }
+    }
+  }
+}
+@media (max-width: 800px) {
+  .pagination-wrapper {
+    .pagination {
+      gap: 10px;
+    }
+  }
+}
