--- a/styles/news-styles.scss
+++ b/styles/news-styles.scss
@@ -388,6 +388,9 @@
     p {
       margin: 1em 0;
     }
+    img {
+      display: inline-block;
+    }
     .alignleft {
       float: left;
       margin-right: 25px;
