--- a/styles/why-section.scss
+++ b/styles/why-section.scss
@@ -27,11 +27,22 @@
   }
 }
 
-.goal_images {
+.goal_images_container {
+  justify-content: center;
+  width: 43%;
+  margin: 2% 28% 0 28%;
+  height: auto;
+}
+
+.goal_images_one {
   display: flex;
   justify-content: space-evenly;
-  justify-items: center;
+}
+.goal_images_two {
+  margin-top: 10px;
+  display: flex;
   padding: 0 12% 0 12%;
+  justify-content: space-evenly;
 }
 
 .goals_container {
@@ -63,6 +74,17 @@
     overflow: hidden;
     width: 335px;
     height: 144px;
+  }
+
+  .goal_images_one {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+  }
+  .goal_images_two {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
   }
 
   .goals_container {
