--- a/styles/about-us.scss
+++ b/styles/about-us.scss
@@ -1,7 +1,6 @@
 .sub-nav-container {
   background: #ffffff;
   box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
-  font-family: 'Open Sans';
 
   ul {
     overflow-x: auto;
@@ -63,7 +62,6 @@ h1.where_our_team_title {
   text-align: center;
   display: block;
   margin: 0 auto;
-  font-family: 'Open Sans';
   color: #528fec;
   padding-top: 56px;
   padding-bottom: 40px;
@@ -91,7 +89,6 @@ img.map_img {
     text-align: center;
     display: block;
     margin: auto;
-    font-family: 'Open Sans';
     color: #528fec;
     padding-top: 56px;
     padding-bottom: 40px;
@@ -178,7 +175,6 @@ img.map_img {
   /*FEATURED CARD STYLING*/
 
   .member_card {
-    font-family: 'Open Sans';
     display: flex;
     margin: 0 auto;
     flex-direction: row;
@@ -279,7 +275,6 @@ img.map_img {
     text-align: center;
     display: block;
     margin: 0 auto;
-    font-family: 'Open Sans';
     color: #528fec;
     padding-top: 56px;
     padding-bottom: 40px;
@@ -515,5 +510,270 @@ img.map_img {
     justify-content: space-evenly;
     max-width: 1580px;
     margin: auto;
+  }
+}
+
+/* OUR STORY SECTION STYLING*/
+
+div.our_stories_container {
+  display: flex;
+  flex-direction: row;
+  background: #528fec;
+  align-items: center;
+  width: fit-content;
+}
+
+.left_container {
+  flex: 1 1 0;
+  color: #ffffff;
+  justify-content: space-evenly;
+  margin-left: 100px;
+}
+
+h1.our_stories_title {
+  margin-top: 40px;
+  text-align: left;
+  font-weight: bold;
+  // font-style: normal;
+  font-size: 28px;
+  // line-height: 40px;
+  margin-bottom: 20px;
+}
+
+p.our_stories_content {
+  font-size: 16px;
+  font-style: normal;
+  line-height: 24px;
+  text-align: left;
+  padding: 0;
+}
+
+button.btn {
+  display: block;
+  margin: 30px 0px 50px 0px;
+  background-color: #2c2d41;
+  border-radius: 100px;
+  border: none;
+  width: 300px;
+  height: 50px;
+  outline: none;
+}
+
+button.btn:hover {
+  cursor: pointer;
+}
+
+.btn_text {
+  text-transform: uppercase;
+  color: #ffffff;
+  font-size: 15px;
+  line-height: 20.43px;
+  font-weight: 700;
+}
+
+.btn_text.mobile {
+  display: none;
+}
+
+a {
+  text-decoration: none;
+}
+
+.right_container {
+  display: flex;
+  flex: 1 1 0;
+  justify-content: center;
+  align-items: center;
+}
+
+img.our_stories_img {
+  height: 330px;
+  width: 380px;
+  float: left;
+  margin: 55px;
+  filter: drop-shadow(0px 4px 10px rgba(0, 0, 0, 0.15));
+  box-shadow: 20px 20px 0px #b7d3ff;
+  border-radius: 20px;
+}
+
+/*STORIES ABOUT AIR POLLUTION SECTION*/
+
+.stories_air_pollution {
+  display: flex;
+  flex-direction: column;
+}
+
+.stories_wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+h1.air_pollution_title {
+  font-size: 28px;
+  // font-style: normal;
+  font-weight: bold;
+  color: #528fec;
+  // line-height: 40px;
+  text-align: center;
+  margin: 40px;
+}
+
+.story_card {
+  display: flex;
+  background: #ffffff;
+  flex-direction: column;
+  justify-content: stretch;
+  align-items: center;
+  box-shadow: 0px 4px 20px rgba(138, 138, 138, 0.15);
+  border-radius: 20px;
+  min-height: 250px;
+  width: 330px;
+}
+
+p.story_card_story {
+  display: flex;
+  align-items: center;
+  text-align: center;
+  padding: 0 30px 0 30px;
+  height: 80%;
+}
+
+p.story_card_name {
+  align-self: flex-end;
+  justify-self: flex-end;
+  padding: 0 30px;
+  font-size: 14px;
+  color: #528fec;
+}
+
+img.quotation_mark {
+  padding-top: 10px;
+  width: 43px;
+  height: 33px;
+}
+
+button.read_more_btn {
+  background-color: #2c2d41;
+  border: none;
+  border-radius: 100px;
+  width: 300px;
+  height: 50px;
+  margin: 36px;
+  outline: none;
+}
+
+button.read_more_btn:hover {
+  cursor: pointer;
+}
+
+/*MOBILE SIZING for OUR STORY SECTION*/
+
+@media only screen and (min-width: 320px) and (max-width: 790px) {
+  div.our_stories_container {
+    flex-direction: column-reverse;
+    align-items: center;
+    justify-content: center;
+    background: #2c2d41;
+    width: 100%;
+    overflow-x: hidden;
+  }
+
+  .left_container {
+    text-align: center;
+    margin-left: 20px;
+    margin-right: 20px;
+  }
+
+  img.our_stories_img {
+    height: 240px;
+    width: 290px;
+    box-shadow: none;
+    border-radius: 20px;
+  }
+
+  h1.our_stories_title {
+    text-align: center;
+    text-transform: uppercase;
+    font-weight: bold;
+    font-size: 18px;
+    // margin-top: 20px;
+  }
+
+  button.btn {
+    display: block;
+    margin: 20px auto;
+    background: #528fec;
+    border-radius: 100px;
+    border: none;
+    width: 300px;
+    height: 50px;
+    outline: none;
+  }
+
+  .btn_text {
+    text-transform: uppercase;
+    color: #ffffff;
+    font-size: 14px;
+    font-weight: bold;
+  }
+
+  .btn_text.mobile {
+    display: contents;
+  }
+
+  .btn_text.desktop {
+    display: none;
+  }
+}
+
+/*MOBILE SIZING for STORIES ABOUT AIR POLLUTION SECTION*/
+
+@media only screen and (min-width: 320px) and (max-width: 790px) {
+  .stories_air_pollution {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .stories_wrapper {
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+  }
+
+  h1.air_pollution_title {
+    font-size: 18px;
+    text-align: center;
+  }
+
+  .story_card {
+    display: flex;
+    flex-direction: column;
+    justify-content: stretch;
+    align-items: center;
+    height: 250px;
+    max-height: 250px;
+    width: 330px;
+  }
+
+  // p.story_card_story {
+  //   display: flex;
+  //   align-items: center;
+  //   padding: 0 30px 0 30px;
+  //   overflow-y: auto;
+  // }
+
+  // p.story_card_name {
+  //   align-self: flex-end;
+  //   justify-self: flex-end;
+  //   padding: 0 30px;
+  //   font-size: 14px;
+  //   color: #528fec;
+  // }
+
+  .mobile-display {
+    /*changes button text from 'read more stories' to 'read more'*/
+    display: none;
   }
 }
