Added AirTable Ticket: https://airtable.com/appOvN6ebfePhznL6/tblt7cBqWtHIWJd7l/viw6VAl5LC7AsAOvc/rec77kDIPAUeOwkbi?blocks=hide
Removed screenWith from useEffect
Centered TakeActionPage
Changed TakeActionTile limit to 18, 9 and 6

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -597,18 +597,15 @@ p {
   margin: 5px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 4px;
-  max-width: 236px;
-  width: 236px !important;
   cursor: pointer;
   text-decoration: none;
-  height: 200px;
 
   &.big {
-    max-width: 487px;
-    width: 487px !important;
-    height: 422px;
     grid-column: auto / span 2;
     grid-row: auto / span 2;
+    width: auto;
+    height: auto;
+    margin-right: 5px;
 
     .take-action-img {
       height: 306px;
