Update our team

--- a/styles/about-us.scss
+++ b/styles/about-us.scss
@@ -421,6 +421,7 @@ img.map_img {
       font-size: 20px;
       padding-top: 25px;
       padding-bottom: 0px;
+      margin-bottom: 20px;
     }
 
     .carousel_container {
