--- a/styles/about-us.scss
+++ b/styles/about-us.scss
@@ -1112,3 +1112,65 @@ button.read_more_btn:hover {
   width: 100%;
   height: 800px;
 }
+
+// GoalsCard
+.goal_card {
+  display: flex;
+  flex-direction: column;
+  margin: 20px auto;
+  width: 320px;
+  height: 190px;
+  background: #ffffff;
+  box-shadow: 0px 4px 20px rgba(138, 138, 138, 0.15);
+  border-radius: 20px;
+  padding: 20px;
+
+  .goal_title {
+    font-weight: 600;
+    font-size: 25px;
+    line-height: 150%;
+    text-align: center;
+    color: #528fec;
+    margin-top: 0;
+  }
+
+  .goal_keyword {
+    color: #528fec;
+    font-style: italic;
+  }
+
+  .first_paragraph {
+    font-weight: 600;
+    line-height: 150%;
+    text-align: center;
+    margin: auto;
+  }
+
+  .second_paragraph {
+    font-size: 14px;
+    line-height: 150%;
+    text-align: center;
+    color: #7f7f7f;
+    margin: 5px;
+  }
+}
+
+@media only screen and (max-width: 1064px) {
+  .goal_card {
+    width: 300px;
+    height: 190px;
+
+    .goal_title {
+      font-size: 25px;
+      margin: 10px;
+    }
+
+    .first_paragraph {
+      font-size: 18px;
+    }
+
+    .second_paragraph {
+      font-size: 14px;
+    }
+  }
+}
